Set flex to Column

--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
   </head>
   <body>
     <div id="mainContainer">
-      <div id="leftPanel" class="Panels">
-        Enter no. : <input type="number" id="numInput" value="" />
+      <center>
+        <div id="leftPanel" class="Panels">
+          Enter no. : <input type="number" id="numInput" value="" />
 
-        <div id="goButton">Go!</div>
-      </div>
+          <div id="goButton"><h3>Go!</h3></div>
+        </div>
+      </center>
 
       <div id="rightPanel" class="Panels">
         <!-- ALL DIVS WILL BE INSERTED HERE -->
